Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24129

Cleaning and building specific products in a Qbs project does not work

    XMLWordPrintable

Details

    • 660b2671933f11154087ff40885bac04493bb918 (qt-creator/qt-creator/master)

    Description

      When clicking on "Clean product xxx" or "Build product xxx" in a Qbs project no action is performed. Doing the same for "project xxx" works.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            rweickelt Richard Weickelt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes