QbsProjectManager: Disable build and clean actions during parsing

The qbs-specific actions such as "build file", "build product" and
"clean product" were not properly updated on parse status changes, so
they would stay enabled during a parse, leading to user confusion about
why nothing happened when clicking them.

Fixes: QTCREATORBUG-24129
Change-Id: Ia19052e287f0ce1d965332e8ccd9efb46c8d005e
Reviewed-by: Christian Stenger <christian.stenger@qt.io>